ros2_ws/log/build_2024-07-09_07-19-12/mpu9250/stdout_stderr.log
running egg_info
writing ../../build/mpu9250/mpu9250.egg-info/PKG-INFO
writing dependency_links to ../../build/mpu9250/mpu9250.egg-info/dependency_links.txt
writing entry points to ../../build/mpu9250/mpu9250.egg-info/entry_points.txt
writing requirements to ../../build/mpu9250/mpu9250.egg-info/requires.txt
writing top-level names to ../../build/mpu9250/mpu9250.egg-info/top_level.txt
reading manifest file '../../build/mpu9250/mpu9250.egg-info/SOURCES.txt'
writing manifest file '../../build/mpu9250/mpu9250.egg-info/SOURCES.txt'
running build
running build_py
copying mpu9250/mpu9250_publisher.py -> /root/ros2_ws2/build/mpu9250/build/lib/mpu9250
running install
running install_lib
copying /root/ros2_ws2/build/mpu9250/build/lib/mpu9250/mpu9250_publisher.py -> /root/ros2_ws2/install/mpu9250/lib/python3.10/site-packages/mpu9250
byte-compiling /root/ros2_ws2/install/mpu9250/lib/python3.10/site-packages/mpu9250/mpu9250_publisher.py to mpu9250_publisher.cpython-310.pyc
  File "/root/ros2_ws2/install/mpu9250/lib/python3.10/site-packages/mpu9250/mpu9250_publisher.py", line 12
    from imusensor/imusensor.MPU9250 import MPU9250
                  ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/root/ros2_ws2/install/mpu9250/lib/python3.10/site-packages/mpu9250-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/mpu9250/mpu9250.egg-info to /root/ros2_ws2/install/mpu9250/lib/python3.10/site-packages/mpu9250-0.0.0-py3.10.egg-info
running install_scripts
Installing mpu9250_publisher script to /root/ros2_ws2/install/mpu9250/lib/mpu9250
writing list of installed files to '/root/ros2_ws2/build/mpu9250/install.log'
